{
    "name": "TouchInputAction",
    "maps": [
        {
            "name": "Touch",
            "id": "86924b20-d0e3-452d-aae3-729221e1caf3",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "071e11c5-e03a-4425-92f4-8fe65f209358",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TapPos",
                    "type": "Value",
                    "id": "0f5f633a-583f-4bae-9ff7-d905d6e8f5df",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DoubleTap",
                    "type": "Button",
                    "id": "842dd9c2-eb18-46b0-ad26-81dd7fb87718",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a86ea089-52f1-4fd9-adb6-b32c0a302eaa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3471cb9a-6340-48b3-9d17-589388acdad0",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32432daf-b8b7-410e-8267-b5f185445582",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "385a264d-c6dc-4168-bdc9-e23e2656ff03",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fca7b17c-0e2f-469e-bf81-7cba26a0a974",
                    "path": "<Mouse>/leftButton",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ebdaaad-f698-46c5-becd-f161dd096f33",
                    "path": "<Touchscreen>/Press",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}